<resources>
    <string name="hello_world">WETHEPNU</string>
    <string name="app_name">WETHEPNU</string>
    <string name="title_activity_detail_acivity">detailAcivity</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="title_activity_report">reportActivity</string>
    <string name="title_activity_discuss">discuss</string>
    <string name="title_activity_discuss_detail">discussDetailActivity</string>
    <string name="title_activity_add_agenda">국 민 청 원</string>
    <string name="title_activity_splash">splashActivity</string>
    <string name="nav_menu_1">즐겨찾기목록</string>
    <string name="nav_menu_2">Push알림목록</string>
    <string name="nav_menu_3">자유토론게시판</string>
    <string name="nav_menu_4">답변게시판</string>
    <string name="nav_menu_5">Log Out</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>
    <string name="title_activity_add_discuss">addDiscussActivity</string>
    <string name="title_activity_answer">AnswerActivity</string>

</resources>
