<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item1"
            android:fontFamily="@font/notosans_medium"
            android:title="@string/nav_menu_1" />

        <item
            android:id="@+id/navigation_item2"
            android:fontFamily="@font/notosans_medium"
            android:title="@string/nav_menu_2" />
        <item
            android:id="@+id/navigation_item3"
            android:fontFamily="@font/notosans_medium"
            android:title="@string/nav_menu_3" />
        <item
            android:id="@+id/navigation_item4"
            android:fontFamily="@font/notosans_medium"
            android:title="@string/nav_menu_4"/>
        <item
            android:id="@+id/navigation_item5"
            android:fontFamily="@font/notosans_medium"
            android:title="@string/nav_menu_5" />
    </group>
</menu>
